# madrigal

./: CHANGELOG.md  README.md  madrigal.cabal
mod/madrigal/: madrigal.lua
src/: Data.hs  Lua.hs  Main.hs  Net.hs  Prog.hs  Vulk.hs  Win.hs
src/Lua/: Data.hs
src/Net/: Data.hs
src/Prog/: Data.hs  Event.hs  Foreign.hs  Init.hs  Input.hs  KeyEvent.hs  Mouse.hs  Util.hs
src/Sign/: Data.hs
src/Vulk/: Buff.hs  Callback.hs  Command.hs  Data.hs  Device.hs  Foreign.hs  Init.hs  Instance.hs  Loop.hs  Pipeline.hs  Shader.hs  Texture.hs  Trans.hs  VulkGLFW.hs
src/Win/: Data.hs
