cabal-version:      3.4
-- The name of the package.
name: madrigal
-- The package version.
version: 0.1.0.0
-- URL for the project homepage or repository.
homepage: https://github.com/coghex/madrigal
-- The license under which the package is released.
license: MIT
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: coghex
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: vincecoghlan@gmail.com
category: Game
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable madrigal
    -- Import common warning flags.
    import: warnings
    -- .hs or .lhs file containing the Main module.
    main-is: Main.hs
    -- Modules included in this executable, other than Main.
    other-modules: UPrelude
                 , Data
                 , Prog
                 , Prog.Data
                 , Prog.Init
                 , Prog.Util
                 , Sign
                 , Sign.Data
                 , Sign.Except
                 , Sign.Queue
                 , Sign.Var
                 , Vulk
                 , Vulk.Callback
                 , Vulk.Data
                 , Vulk.GLFW
                 , Vulk.VulkGLFW
    -- LANGUAGE extensions used by modules in this package.
    default-extensions: LambdaCase
                      , UnicodeSyntax
    other-extensions: Strict
                      TemplateHaskell
    -- Other library packages from which modules are imported.
    build-depends: base
                 , base-unicode-symbols
                 , containers
                 , filepath
                 , GLFW-b
                 , monad-logger
                 , mtl
                 , stm
                 , time
                 , vulkan
                 , template-haskell
    -- Directories containing source files.
    hs-source-dirs: src
    -- Base language which the package is written in.
    default-language: GHC2021
